kubernetes/apps/media/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-audiobookshelf
  namespace: traefik
  annotations:
    # add new home service hostnames here as comma-separated values
    external-dns.alpha.kubernetes.io/hostname: audiobooks.titushome.dev
    external-dns.alpha.kubernetes.io/ttl: "60"
    "lbipam.cilium.io/ips": "10.0.40.102"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 443
      targetPort: 443
